# ai

./: .gitignore  lec1.ipynb  lec2.ipynb  lec3.ipynb  pyproject.toml
1/: miivba1.ipynb
2/: miivba2.ipynb
3/: miivba3.ipynb
data/lec1/: data.csv
