[tool.poetry]
name = "ai"
version = "1.0.0"
description = "AI Interpretation Examples"
authors = ["Aleksey Filippov <al.filippov@ulstu.ru>"]
readme = "readme.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.6.1"
matplotlib= "^3.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
