[project]
name = "ai"
version = "1.0.0"
description = "AI Interpretation Examples"
authors = [
    {name = "Aleksey Filippov", email = "al.filippov@ulstu.ru"}
]
readme = "readme.md"
requires-python = ">=3.11,<3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
jupyter = "^1.1.1"
numpy = "^1.26.4"
pandas = "^1.5.3"
scikit-learn = "^1.6.1"
matplotlib= "^3.10.1"
machine-learning-datasets = "^0.1.23"
statsmodels = "^0.14.4"
mlxtend = "^0.23.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
